--- a/space1.css
+++ b/space1.css
@@ -10,10 +10,12 @@ body {
 	
 	/* put css-rules in this ccs-block here below */
 
-	padding: 10px;
+	padding: 0px;
+	padding-top: 10px;
+	padding-bottom: 20px;
 	margin:90px;
 	margin-top: 0px;
-	max-width: 598px;
+	max-width: 618px;
 	
 
 }
@@ -25,8 +27,8 @@ h1{
 	/* put css-rules in this ccs-block here below */
 
 	padding: 20px;
+	margin: 10px;
 	margin-bottom: 30px;
-	margin-top: 10px;
 	max-width: 600px;
 
 
@@ -36,8 +38,12 @@ h2 {
 	line-height: 30px;
 	
 	/* put css-rules in this ccs-block here below */
-
-	padding: 10px;
+	
+	margin: 10px;
+	margin-bottom: 10px;
+	padding: 20px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	border: 5px;
 	border-style: solid;
 	border-color: purple;
@@ -52,6 +58,8 @@ p{
 
 	margin: 10px;
 	padding: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	max-width: 590px;
 	margin-left: 10px;
 
