--- a/space2.css
+++ b/space2.css
@@ -1,19 +1,20 @@
 		body {
 			background-image: url(bg.png);
-			font-family: Tahoma;
+			font-family: sans-serif;
 			
-			height: 606px
+			height: 616px
 			  
 
 		}
 		
 		#frame {
 			background-color: rgba(255,200,200,0.3);
-			max-width: 1000px;
+			max-width: 1010px;
 			margin: 0 auto;
 			padding-bottom:10px;
 			padding-top: 12px
 
+			
 			
 		}
 		
@@ -22,8 +23,7 @@
 			background-color: rgba(255,255,200,0.3);
 			font-weight: bold;
 			text-align: left;
-			margin-left: 5px;
-
+			margin-left: 10px;
 			padding-left: 10px;
 			padding: 10px;
 			margin-right: 10px;
@@ -59,8 +59,8 @@
 			padding-left: 10px;
 			padding-right: 10px;
 			padding-top: 10px;
-			padding-bottom: 115px;
-			width: 660px;
+			padding-bottom: 140px;
+			width: 680px;
 
 
 		}
@@ -73,10 +73,12 @@
 			padding: 10px;
 			padding-right: 10px;
 
+
 		}
 		
 		body article {
 			background-color: rgba(200,200,200,0.6);
+			
 
 		}
 		
