Changed margin to auto.

--- a/space1.css
+++ b/space1.css
@@ -13,7 +13,7 @@ body {
 	padding: 0px;
 	padding-top: 10px;
 	padding-bottom: 20px;
-	margin:90px;
+	margin: 0 auto;
 	margin-top: 0px;
 	max-width: 618px;
 	
